# sql-query-inference

./: Cargo.toml  README.md  query_analysis_data.csv  similar_tables_output.json  tables_output.csv  tables_output.json
src/: cli.rs  csv_ingester.rs  inference.rs  json_creator.rs  lib.rs  main.rs  processor.rs  query.rs
