[package]
name = "sql-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
structopt = "0.3.26"

[[bin]]
name = "query_tokenize_and_parse"
path = "src/lib.rs"
